--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# any proto generated file
+proto/**/*.go
+
 # Go workspace file
-go.work
+
